# rego_estimator

./: LICENSE  README.md
deploy/: Dockerfile  azure_deploy.md
server/: pyproject.toml
server/src/vic_rego_estimator/: auth.py  config.py  main.py
server/src/vic_rego_estimator/models/: schemas.py
server/src/vic_rego_estimator/scraping/: parser.py  sources.py
server/src/vic_rego_estimator/static/widget/: index.html  widget.js
server/src/vic_rego_estimator/static/widget/assets/: index-BWRurWma.js
server/src/vic_rego_estimator/storage/: snapshot_store.py
server/src/vic_rego_estimator/tools/: estimator.py  normalize.py  registry.py
server/tests/: test_apps_sdk_integration.py  test_auth_middleware.py  test_quality_controls.py  test_scraping_parser.py  test_tools_contract.py
ui/: index.html  package.json  vite.config.ts
ui/src/: widget.ts
ui/src/components/: lineItems.ts
