[project]
name = "vic-rego-estimator-server"
version = "0.1.0"
description = "MCP backend for Vic Rego Estimator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "azure-storage-blob>=12.22.0",
  "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
